<resources>
    <string name="app_name">abcd777</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_code">Код:</string>
    <string name="currency_name">Название:</string>
    <string name="currency_buy">Покупка:</string>
    <string name="currency_sell">Продажа:</string>
    <string name="currency_cost">-</string>
    <string name="default_city">Брест</string>
    <string name="choose_city">Выберите город</string>
    <string name="USD">USD</string>
    <string name="EUR">EUR</string>
    <string name="RUB">RUB</string>
    <string name="loading">Loading…</string>
    <string name="error">Something went wrong try again later</string>

    <string-array name="cities">
        <item>Брест</item>
        <item>Минск</item>
        <item>Гродно</item>
        <item>Гомель</item>
        <item>Витебск</item>
        <item>Могилёв</item>
    </string-array>

</resources>