<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:text="@string/currency_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/green"
                android:text="@string/currency_buy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/green"
                android:text="@string/currency_sell"/>

        </LinearLayout>



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginStart="8dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            >

            <TextView
                android:id="@+id/tv_currency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:maxLength="40"
                android:text="@string/currency_name"/>

            <TextView
                android:id="@+id/tv_currency_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="3dp"
                android:text="@string/currency_cost"/>

            <TextView
                android:id="@+id/tv_currency_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="3dp"
                android:text="@string/currency_cost"/>

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>