<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:startIconDrawable="@drawable/ic_city"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_eur"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewMain"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/choose_city"
            android:inputType="none"
            android:gravity="center"
            android:text="@string/default_city"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_eur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_type"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/green"
                    android:text="@string/currency_name"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/green"
                    android:text="@string/currency_buy"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/green"
                    android:text="@string/currency_sell"/>

            </LinearLayout>



            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginStart="8dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_name_eur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:maxLength="40"
                    android:text="@string/EUR"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_buy_eur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:text="@string/currency_cost"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_sell_eur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:text="@string/currency_cost"/>

            </LinearLayout>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_rub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_eur"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/green"
                    android:text="@string/currency_name"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/green"
                    android:text="@string/currency_buy"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/green"
                    android:text="@string/currency_sell"/>

            </LinearLayout>



            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginStart="8dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_name_rub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:maxLength="40"
                    android:text="@string/RUB"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_buy_rub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:text="@string/currency_cost"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_sell_rub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:text="@string/currency_cost"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_usd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_rub"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/green"
                    android:text="@string/currency_name"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/green"
                    android:text="@string/currency_buy"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/green"
                    android:text="@string/currency_sell"/>

            </LinearLayout>



            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginStart="8dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_name_usd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:maxLength="40"
                    android:text="@string/USD"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_buy_usd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:text="@string/currency_cost"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_currency_sell_usd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:text="@string/currency_cost"/>

            </LinearLayout>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorSize="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinner_type"
        android:indeterminate="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        app:layout_constraintStart_toStartOf="@id/progress_circular"
        app:layout_constraintEnd_toEndOf="@id/progress_circular"
        app:layout_constraintTop_toBottomOf="@id/progress_circular"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textSize="20sp"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>
